# smol

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
asset/: bus.mtl
src/: drawing.cpp  drawing.hpp  image.cpp  image.hpp  main.cpp  model.cpp  model.hpp  utils.cpp  utils.hpp
